[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/ScoreBoardOnline.gd" type="Script" id=1]
[ext_resource path="res://ubuntu-font-family/UB22C3.tres" type="DynamicFont" id=2]
[ext_resource path="res://themes/theme_test.tres" type="Theme" id=3]

[node name="ScoreBoardOnline" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
rect_clip_content = true
theme = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -244.0
margin_top = -189.0
margin_right = 244.0
margin_bottom = 189.0

[node name="Names" type="ItemList" parent="Panel"]
anchor_bottom = 1.0
margin_right = 346.0

[node name="Scores" type="ItemList" parent="Panel"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -106.0

[node name="Label" type="Label" parent="."]
margin_left = 398.0
margin_top = 70.0001
margin_right = 476.0
margin_bottom = 101.0
custom_fonts/font = ExtResource( 2 )
text = "Names"

[node name="Label2" type="Label" parent="."]
margin_left = 665.001
margin_top = 71.0001
margin_right = 743.001
margin_bottom = 102.0
custom_fonts/font = ExtResource( 2 )
text = "Score"

[node name="Panel2" type="Panel" parent="."]
visible = false
self_modulate = Color( 0, 0, 0, 0.239216 )
margin_left = 267.0
margin_top = 111.0
margin_right = 756.0
margin_bottom = 490.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Panel2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -88.0
margin_top = -19.5
margin_right = 88.0
margin_bottom = 19.5
text = "KEY_SIGNIN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Login Panel" type="PopupPanel" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -254.0
margin_top = -197.5
margin_right = 254.0
margin_bottom = 197.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sign In" type="Control" parent="Login Panel"]
margin_left = 18.7729
margin_right = 18.7729
margin_bottom = 395.0
grow_horizontal = 2
grow_vertical = 2

[node name="Email" type="LineEdit" parent="Login Panel/Sign In"]
margin_top = 108.0
margin_right = 230.0
margin_bottom = 147.0
placeholder_text = "Email"

[node name="Password" type="LineEdit" parent="Login Panel/Sign In"]
margin_top = 151.0
margin_right = 230.0
margin_bottom = 190.0
secret = true
placeholder_text = "Password"

[node name="HSeparator" type="HSeparator" parent="Login Panel/Sign In"]
margin_top = 194.0
margin_right = 230.0
margin_bottom = 198.0

[node name="Sign In" type="Button" parent="Login Panel/Sign In"]
margin_top = 202.0
margin_right = 230.0
margin_bottom = 241.0
text = "KEY_SIGNIN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restore" type="Button" parent="Login Panel/Sign In"]
margin_top = 245.0
margin_right = 230.0
margin_bottom = 284.0
text = "KEY_RESTORE_P"

[node name="Sign Up" type="Control" parent="Login Panel/Sign In"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 247.227
margin_right = 247.227
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Email" type="LineEdit" parent="Login Panel/Sign In/Sign Up"]
margin_top = 110.0
margin_right = 229.0
margin_bottom = 149.0
placeholder_text = "Email"

[node name="Password" type="LineEdit" parent="Login Panel/Sign In/Sign Up"]
margin_top = 153.0
margin_right = 229.0
margin_bottom = 192.0
secret = true
placeholder_text = "Password"

[node name="Confirm Password" type="LineEdit" parent="Login Panel/Sign In/Sign Up"]
margin_top = 196.0
margin_right = 229.0
margin_bottom = 235.0
secret = true
placeholder_text = "Confirm Password"

[node name="HSeparator" type="HSeparator" parent="Login Panel/Sign In/Sign Up"]
margin_top = 239.0
margin_right = 229.0
margin_bottom = 243.0

[node name="SignUp" type="Button" parent="Login Panel/Sign In/Sign Up"]
margin_top = 247.0
margin_right = 229.0
margin_bottom = 286.0
text = "KEY_SIGNUP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Login Panel"]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -39.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "KEY_PASS_ERR"
align = 1
valign = 3
[connection signal="pressed" from="Panel2/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Login Panel/Sign In/Sign In" to="." method="_on_Sign_In_pressed"]
[connection signal="pressed" from="Login Panel/Sign In/Restore" to="." method="_on_Restore_pressed"]
[connection signal="pressed" from="Login Panel/Sign In/Sign Up/SignUp" to="." method="_on_SignUp_pressed"]
